--- a/6 - groupby.ipynb
+++ b/6 - groupby.ipynb
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001CE9242DB00>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000025765216CB0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7355,8 +7355,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9ca82aad1025d55d62089753f95b9fe272a349dd3ad99f9274e656dc3d5fe496"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('ev-pd')",
    "language": "python",
    "name": "python3"
   },
@@ -7370,7 +7373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
